# brute-force-plotter

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTORS.md  CONTRIBUTORS.rst  LICENSE  LICENSE.md  README.md  README.rst  brute_force_plotter.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/workflows/: python-package.yml  python-publish.yml
brute_force_plotter/: brute_force_plotter.py  plot_types.py  plotter.py  utils.py
example/: cities_geo.csv  cities_geo_dtypes.json  library_usage_example.py  timeseries_data.csv  timeseries_dtypes.json  timeseries_example.py  titanic.csv.parq  titanic_dtypes.json
src/: __init__.py  __main__.py  brute_force_plotter.py  library.py
src/cli/: __init__.py  commands.py  orchestration.py
src/core/: __init__.py  config.py  data_types.py  utils.py
src/plotting/: __init__.py  base.py  maps.py  single_variable.py  summary.py  three_variable.py  timeseries.py  two_variable.py
src/stats/: __init__.py  export.py
tests/: __init__.py  conftest.py  test_3d_plotting.py  test_dtype_inference.py  test_edge_cases.py  test_integration.py  test_large_dataset_fallback.py  test_linting.py  test_map_visualization.py  test_plotting_functions.py  test_statistics_export.py  test_target_variable.py  test_timeseries_plotting.py  test_utilities.py
